--- a/evolution_internship.ipynb
+++ b/evolution_internship.ipynb
@@ -668,7 +668,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at the distribution of charges. We can see left skew here with heavy right tail."
+    "Look at the distribution of charges. We can see right skew here with heavy right tail."
    ]
   },
   {
